--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "com.diffplug.gradle.spotless" version "4.0.1"
     id "org.springframework.boot" version "2.5.0"
     id "org.seasar.doma.compile" version "1.0.0"
+    id "org.sonarqube" version "3.3"
 }
 
 version = "2.36.0-beta-1"
